--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World from RNAeye</h1>
+<h1>test page. nothing is interesting here for you</h1>
 <p>I'm hosted with GitHub Pages.....</p>
 </body>
 </html>
