--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>test page. nothing is interesting here for you</h1>
+<h1>Links to useful pages for NGS data analysis.</h1>
 <p>I'm hosted with GitHub Pages.....</p>
 </body>
 </html>
