--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Links to useful pages for NGS data analysis.</h1>
-<p>I'm hosted with GitHub Pages.....</p>
+<h2>UCS Utilities webpage</h2>  
+  <p>
+  <a href="http://hgdownload.soe.ucsc.edu/downloads.html#utilities_downloads">UCSC utilities website</a>
+  </p>
 </body>
 </html>
