--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
   <p>
   <a href="http://hgdownload.soe.ucsc.edu/downloads.html#utilities_downloads">UCSC utilities website</a>
   </p>
+<p>
+To downaload all the utility programs, run for current director:
+<code>
+rsync -aP hgdownload.soe.ucsc.edu::genome/admin/exe/macOSX.x86_64/ .
+</code>
+
+</p>
+  
 </body>
 </html>
