--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Links to useful pages for NGS data analysis.</h1>
-<h2>UCS Utilities webpage</h2>  
-  <p>
+<h1>Links to useful pages for NGS data analysis.</h1>  
+  <p>UCS Utilities webpage:  
   <a href="http://hgdownload.soe.ucsc.edu/downloads.html#utilities_downloads">UCSC utilities website</a>
   </p>
 <p>
