--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 <h1>Links to useful pages for NGS data analysis.</h1>  
+  
   <p>UCS Utilities webpage:  
   <a href="http://hgdownload.soe.ucsc.edu/downloads.html#utilities_downloads">UCSC utilities website</a>
   </p>
-<p>
-To downaload all the utility programs, run for current director:
+
+  <p>
+To downaload all the utility programs to your current directory, run the following command: <br>
 <code>
 rsync -aP hgdownload.soe.ucsc.edu::genome/admin/exe/macOSX.x86_64/ .
 </code>
